More work on hot plasma dielectric tensor.

--- a/EBW/definitions.tex
+++ b/EBW/definitions.tex
@@ -16,8 +16,10 @@
 \def \v{\textbf{v}}
 \def \vpar{v_\parallel}
 \def \vper{v_\perp}
-\def \spar{s_\parallel}
-\def \sper{s_\perp}
+%\def \spar{s_\parallel}
+%\def \sper{s_\perp}
+\def \betapar{\beta_\parallel}
+\def \betaper{\beta_\perp}
 \def \kpar{k_\parallel}
 \def \kper{k_\perp}
 \def \Npar{N_\parallel}
