--- a/EBW/appendix.tex
+++ b/EBW/appendix.tex
@@ -104,35 +104,76 @@ These terms are the components of a cross product, hence we see this is equal to
 	2\int_0^\infty J_n^2 \left( x \sqrt{2b} \right) x e^{-x^2} dx = I_n(b) e^{-b}
 \end{equation}
 \begin{equation}\label{bessel_int_jn_jn_prime}
-	4\int_0^\infty J_n \left( w \sqrt{2b} \right) J_n' \left( x \sqrt{2b} \right) x^2 e^{-x^2} dx = \sqrt{2b} \left(I_n'(b) - I_n(b) \right) e^{-b}
+	4\int_0^\infty J_n \left( x \sqrt{2b} \right) J_n' \left( x \sqrt{2b} \right) x^2 e^{-x^2} dx = \sqrt{2b} \left(I_n'(b) - I_n(b) \right) e^{-b}
 \end{equation}
 \begin{equation}\label{bessel_int_jn_prime2}
 	4\int_0^\infty \left(J_n' \left( x \sqrt{2b} \right) \right)^2 x^3 e^{-x^2} dx = \left[ \frac{n^2}{b}I_n(b) + 2b \left( I_n(b) - I_n'(b) \right) \right] e^{-b}
 \end{equation}
 
-First integral is from []. \eqref{bessel_int_jn_jn_prime} and \eqref{bessel_int_jn_prime2} are derived from derivatives of \eqref{bessel_int_jn2}. We get \eqref{bessel_int_jn2} from Weber's second integral with $p = \sqrt{2b}$ and $q=1$.
-\begin{equation}
-	\int_0^\infty J_n^2 \left( px \right) x e^{-q^2x^2} dx = \frac{1}{2q^2} e^{-\frac{p^2}{2q^2}} I_n \left( \frac{p^2}{2q^2} \right)
-\end{equation}
-Taking a derivative with respect to $b$
-
-\begin{equation*}
-	\frac{\partial}{\partial b} \left[ 2\int_0^\infty J_n^2 \left( \sqrt{2b} x \right) x e^{-x^2} dx \right] = 2\int_0^\infty 2 J_n \left( \sqrt{2b} x \right) J_n' \left( \sqrt{2b} x \right) \frac{x}{\sqrt{2b}} xe^{-x^2} dx
-\end{equation*}
-\begin{equation*}
-	\implies 4\int_0^\infty J_n \left( w \sqrt{2b} \right) J_n' \left( x \sqrt{2b} \right) x^2 e^{-x^2} dx = \sqrt{2b} \frac{\partial}{\partial b} \left( e^{-b} I_n(b) \right)
-\end{equation*}
-\begin{equation}
-	\sqrt{2b} \left(I_n'(b) - I_n(b) \right) e^{-b}
+These equations are derived from Weber's integral with q=1 [reference?]
+\begin{equation}\label{weber_integral}
+	\int_0^\infty J_n \left(\alpha x \right) J_n \left( \beta x \right) xe^{-x^2} dx = \frac{1}{2} e^{-\left( \frac{ \alpha^2 + \beta^2 }{4} \right)} I_n \left( \frac{\alpha \beta}{2} \right)
 \end{equation}
 
-Taking another derivative
+Setting $\alpha = \beta = \sqrt{2b}$ so $\alpha^2 + \beta^2 = 4b$ and $\alpha \beta = 2b$ we get \eqref{bessel_int_jn2}. To get the next integral we take a derivative of \eqref{weber_integral} with respect to $\alpha$. The left hand side is
+
 \begin{equation*}
-	\frac{\partial}{\partial b} \left[ 4\int_0^\infty J_n \left( w \sqrt{2b} \right) J_n' \left( x \sqrt{2b} \right) x^2 e^{-x^2} dx \right]
+	\frac{\partial}{\partial \alpha} \int_0^\infty J_n \left(\alpha x \right) J_n \left( \beta x \right) xe^{-x^2} dx = \int_0^\infty \left[ x J_n' \left( \alpha x \right)  \right] J_n \left( \beta x \right)  xe^{-x^2} dx
 \end{equation*}
 \begin{equation}
-	J
+	= \int_0^\infty J_n' \left( \alpha x \right) J_n \left( \beta x \right) x^2e^{-x^2} dx
 \end{equation}
+
+The right hand side gives
+\begin{equation*}
+	\frac{\partial}{\partial \alpha} \frac{1}{2} e^{-\left( \frac{ \alpha^2 + \beta^2 }{4} \right)} I_n \left( \frac{\alpha \beta}{2} \right) = \frac{1}{2} \left[ \frac{-2 \alpha}{4} I_n \left( \frac{\alpha \beta}{2} \right) + \frac{\beta}{2} I_n' \left( \frac{\alpha \beta}{2} \right) \right] e^{-\left( \frac{ \alpha^2 + \beta^2 }{4} \right)}
+\end{equation*}
+\begin{equation}
+	= \frac{1}{4} \left[ \beta I_n' \left( \frac{\alpha \beta}{2} \right) - \alpha I_n \left( \frac{\alpha \beta}{2} \right) \right] e^{-\left( \frac{ \alpha^2 + \beta^2 }{4} \right)}
+\end{equation}
+
+Equating and letting $\alpha = \beta = \sqrt{2b}$ gives \eqref{bessel_int_jn_jn_prime}. To get the final expression we take another derivative, this time with respect to $\beta$. The left hand side gives
+\begin{equation*}
+	\frac{\partial}{\partial \beta} \int_0^\infty J_n' \left( \alpha x \right) J_n \left( \beta x \right) x^2e^{-x^2} dx = \int_0^\infty J_n' \left( \alpha x \right) \left[ x J_n' \left( \beta x \right) \right] x^2e^{-x^2} dx
+\end{equation*}
+\begin{equation}
+	= \int_0^\infty J_n' \left( \alpha x \right) J_n' \left( \beta x \right) x^3e^{-x^2} dx
+\end{equation}
+
+The right hand side gives
+\begin{equation*}
+	\frac{\partial}{\partial \beta} \frac{1}{4} \left[ \beta I_n' \left( \frac{\alpha \beta}{2} \right) - \alpha I_n \left( \frac{\alpha \beta}{2} \right) \right] e^{-\left( \frac{ \alpha^2 + \beta^2 }{4} \right)}
+\end{equation*}
+\begin{equation*}
+	= \frac{1}{4} \left[ I_n' + \frac{\alpha \beta}{2} I_n'' - \frac{\alpha^2}{2} I_n' - \frac{\beta}{2} \left( \beta I_n' - \alpha I_n \right) \right] e^{-\left( \frac{ \alpha^2 + \beta^2 }{4} \right)}
+\end{equation*}
+\begin{equation}
+	= \frac{1}{4} \left[ \frac{\alpha \beta}{2} I_n'' + \left( 1 - \frac{\alpha^2}{2} - \frac{\beta^2}{2} I_n' \right) + \frac{\alpha \beta}{2} I_n \right] e^{-\left( \frac{ \alpha^2 + \beta^2 }{4} \right)}
+\end{equation}
+
+Letting $\alpha = \beta = \sqrt{2b}$ and substituting gives
+
+\begin{equation}
+	\frac{1}{4} \left[ b I_n'' + \left(1 - 2b \right) I_n' + b I_n \right] e^{-b}
+\end{equation}
+
+We can eliminate $I_n''$ by knowing Modified Bessel Functions satisfy the Modified Bessel Equation
+\begin{equation}
+	b^2 I_n'' \left( b \right) + b I_n' \left( b \right) - (b^2 + n^2) I_n \left( b \right) = 0
+\end{equation}
+\begin{equation}
+	\implies bI_n'' = \left( b + \frac{n^2}{b} \right) I_n - I_n'
+\end{equation}
+
+Substituting in we get
+\begin{equation*}
+	\frac{1}{4} \left[ \left( b + \frac{n^2}{b} \right) I_n - I_n' + I_n' - 2b I_n' + b I_n \right] e^{-b}
+\end{equation*}
+\begin{equation}
+	= \frac{1}{4} \left[ \frac{n^2}{b} I_n + 2b \left( I_n - I_n' \right) \right]
+\end{equation}
+
+Equating with the left side with $\alpha = \beta = \sqrt{2b}$ gives \eqref{bessel_int_jn_prime2}.
 
 \subsection{Plasma Dispersion Function}
 \begin{equation}
